fixed width to remove horizontal scrollbars

--- a/style.css
+++ b/style.css
@@ -64,11 +64,11 @@ nav ul .nav-item a {
 }
 
 main {
-  width: 100vw;
+  width: 100%;
 }
 #first-page {
   padding: 2rem 0;
-  width: 100vw;
+  /* width: 100vw; */
   min-height: 70%;
   display: flex;
   justify-content: center;
@@ -103,7 +103,7 @@ main {
 
 #second-page {
   padding: 3rem 0;
-  width: 100vw;
+  /* width: 100vw; */
   height: 100%;
   display: flex;
   justify-content: space-between;
